fix image URLs in pattern library

--- a/less/images.less
+++ b/less/images.less
@@ -12,7 +12,7 @@
 // Generic blog icon
 //
 // Markup:
-// <img src=../img/blog.svg>
+// <img src=https://cdn.digitallinguistics.io/img/blog.svg>
 //
 // Styleguide Images.blog
 
@@ -22,6 +22,6 @@
 // Open book image. Useful as a documentation icon.
 //
 // Markup:
-// <img src=../img/book.open.svg>
+// <img src=https://cdn.digitallinguistics.io/img/book.open.svg>
 //
 // Styleguide Images.book-open
