--- a/less/images.less
+++ b/less/images.less
@@ -25,3 +25,52 @@
 // <img src=https://cdn.digitallinguistics.io/img/book.open.svg>
 //
 // Styleguide Images.book-open
+
+
+// book.side.svg
+//
+// A book lying on its side. Useful as a dictionary icon.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/book.side.svg>
+//
+// Styleguide Images.book-side
+
+// box.svg
+//
+// A three-dimensional (but not 3D) box icon. This is the official icon of the DLx app.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/box.svg>
+//
+// Styleguide Images.box
+
+
+// browse.svg
+//
+// A magnifying glass hovering over some tiles. This is the official icon for the DLx data explorer.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/browse.svg>
+//
+// Styleguide Images.browse
+
+
+// browser.svg
+//
+// A simplified color line-drawing of a browser. This is typically more useful as a thumbnail or small image than an icon.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/browser.svg>
+//
+// Styleguide Images.browser
+
+
+// code.svg
+//
+// An icon representing programming code, e.g. an area with raw JSON data, etc.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/code.svg>
+//
+// Styleguide Images.code
