--- a/less/images.less
+++ b/less/images.less
@@ -74,3 +74,293 @@
 // <img src=https://cdn.digitallinguistics.io/img/code.svg>
 //
 // Styleguide Images.code
+
+
+// computer.svg
+//
+// A computer icon. Used for items concerning developers.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/computer.svg>
+//
+// Styleguide Images.computer
+
+
+// css.svg
+//
+// An icon representing CSS or CSS files. Part of a set of icons for different file types (e.g. JS, HTML).
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/css.svg>
+//
+// Styleguide Images.css
+
+
+// headphones.svg
+//
+// A headphones icon. For indicating audio.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/headphones.svg>
+//
+// Styleguide Images.headphones
+
+
+// html.svg
+//
+// An icon representing HTML or HTML files. Part of a set of icons for different file types (e.g. CSS, JS).
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/html.svg>
+//
+// Styleguide Images.html
+
+
+// info.svg
+//
+// A generic information icon that uses the letter "i" inside a circle. Used for indicating that additional information is available.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/info.svg>
+//
+// Styleguide Images.info
+
+
+// js-logo.svg
+//
+// The official open source JavaScript logo (the letters "JS" in black on a yellow background).
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/js-logo.svg>
+//
+// Styleguide Images.js-logo
+
+
+// js.svg
+//
+// An icon representing JavaScript or JavaScript files. Part of a set of icons for different file types (e.g. HTML, CSS).
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/js.svg>
+//
+// Styleguide Images.js
+
+
+// json.svg
+//
+// An icon representing JSON or JSON files. Part of a set of icons for different file types (e.g. HTML, CSS).
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/json.svg>
+//
+// Styleguide Images.json
+
+
+// language.svg
+//
+// A globe icon inside a speech bubble. This is used to represent the concept of language.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/language.svg>
+//
+// Styleguide Images.language
+
+
+// letters.svg
+//
+// A capital letter "A" followed by a lowercase letter "a". Used for indicating fonts and typography.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/letters.svg>
+//
+// Styleguide Images.letters
+
+
+// menu.svg
+//
+// A generic 3-line menu icon.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/menu.svg>
+//
+// Styleguide Images.menu
+
+
+// mute.svg
+//
+// A generic mute icon.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/mute.svg>
+//
+// Styleguide Images.mute
+
+
+// octicon.svg
+//
+// The GitHub octicon logo.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/octicon.svg>
+//
+// Styleguide Images.octicon
+
+
+// pages.svg
+//
+// Two pages stacked on top of one another. Useful for indicating documentation.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/pages.svg>
+//
+// Styleguide Images.pages
+
+
+// play.svg
+//
+// A generic triangular audio play button.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/play.svg>
+//
+// Styleguide Images.play
+
+
+// question.svg
+//
+// A question mark icon. Used for indicating help text or resources.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/question.svg>
+//
+// Styleguide Images.question
+
+
+// slack.svg
+//
+// The Slack logo. Used for linking to the DLx Slack page.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/slack.svg>
+//
+// Styleguide Images.slack
+
+
+// sort-alpha-asc.svg
+//
+// A sort icon showing the letters "A" on top of "Z" and a downward arrow. Used for indicating ascending alphabetical sort.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/sort-alpha-asc.svg>
+//
+// Styleguide Images.sort-alpha-asc
+
+
+// sort-alpha-desc.svg
+//
+// A sort icon showing the letters "Z" on top of "A" and a downward arrow. Used for indicating descending alphabetical sort.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/sort-alpha-desc.svg>
+//
+// Styleguide Images.sort-alpha-desc
+
+
+// tag.svg
+//
+// A price tag icon. Used for indicating tags / categories on items.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/tag.svg>
+//
+// Styleguide Images.tag
+
+
+// this-is-a-wug.svg
+//
+// An image of a wug with the text "This is a wug" in handwritten letters.
+//
+// Markup:
+// <img class=icon-large src=https://cdn.digitallinguistics.io/img/this-is-a-wug.svg>
+//
+// Styleguide Images.this-is-a-wug
+
+
+// this-is-a-wugbot.svg
+//
+// An image of a robotic wug (wugbot) with the text "This is a wugbot" in handwritten letters.
+//
+// Markup:
+// <img class=icon-large src=https://cdn.digitallinguistics.io/img/this-is-a-wugbot.svg>
+//
+// Styleguide Images.this-is-a-wugbot
+
+
+// tools.svg
+//
+// A generic tools icon, showing a screwdriver and a wrench. Used for indicating tools in an application.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/tools.svg>
+//
+// Styleguide Images.tools
+
+
+// tunnel.svg
+//
+// The DLx tunnel logo, showing a nested set of JSON square brackets and curly brackets. Used as the official logo of DLx.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/tunnel.svg>
+//
+// Styleguide Images.tunnel
+
+
+// user.svg
+//
+// A generic user icon, showing the upper profile of a person.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/user.svg>
+//
+// Styleguide Images.user
+
+
+// wug-wugbot.svg
+//
+// A combination of this-is-a-wug.svg and this-is-a-wugbot.svg. Together, this contrasts the wug and the wugbot (robotic wug) side by side, with the handwritten text, "This is a wug. This is a wugbot."
+//
+// Markup:
+// <img class=icon-large src=https://cdn.digitallinguistics.io/img/wug-wugbot.svg>
+//
+// Styleguide Images.wug-wugbot
+
+
+// wug.svg
+//
+// An image of a blue wug.
+//
+// Markup:
+// <img class=icon-large src=https://cdn.digitallinguistics.io/img/wug.svg>
+//
+// Styleguide Images.wug
+
+
+// wugbot.svg
+//
+// An image of a gray wugbot (robotic wug).
+//
+// Markup:
+// <img class=icon-large src=https://cdn.digitallinguistics.io/img/wugbot.svg>
+//
+// Styleguide Images.wugbot
+
+
+// x-circle.svg
+//
+// A circle with an X inside it. Used for indicating deletion or exiting.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/x-circle.svg>
+//
+// Styleguide Images.x-circle
