--- a/less/images.less
+++ b/less/images.less
@@ -1,6 +1,6 @@
 // Images
 //
-// Images and icons used in DLx projects. Many SVG icons are also available in different colors. For example, `blog.svg` is also available as `blog.blue.svg`. Sometimes you may need to set positive or negative margins on the image to make it the same size as other icons.
+// Images and icons used in DLx projects. Each of the following icons is available in the `/img` folder, and can be linked to via the DLx CDN at `https://cdn.digitallinguistics.io/img/{filename}`. Many SVG icons are also available in different colors. For example, `blog.svg` is also available as `blog.blue.svg`. Most icons are black by default. Sometimes you may need to set positive or negative margins on the image to make it the same size as other icons. For icons available in different sizes, the size is indicated by appending the dimensions to the filename, after an underscore, e.g. `tunnel_64x64.png`.
 //
 // Weight: 2
 //
