--- a/less/inline.less
+++ b/less/inline.less
@@ -100,6 +100,7 @@
   padding: var(--padding-text);
 	text-align: center;
 	text-shadow: 0em var(--line-width) white;
+  white-space: nowrap;
 
   box-shadow: 0em 0.15em 0em var(--gray),
     0.02em 0.225em 0.2em var(--darkgray),
