--- a/css/dlx.css
+++ b/css/dlx.css
@@ -608,6 +608,7 @@ tr {
   outline: 0;
   padding: var(--padding-text);
   text-align: center;
+  white-space: normal;
 }
 .button:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -634,6 +635,8 @@ tr {
 }
 .fieldset legend {
   font-weight: var(--bold);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 .input[type=button] {
   --link-color: white;
@@ -650,6 +653,7 @@ tr {
   outline: 0;
   padding: var(--padding-text);
   text-align: center;
+  white-space: normal;
 }
 .input[type=button]:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -870,6 +874,7 @@ tr {
   --link-color-visited: white;
   background-color: var(--superdarkgreen);
   color: white;
+  white-space: normal;
 }
 .input[type=reset]:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -929,6 +934,7 @@ tr {
   outline: 0;
   padding: var(--padding-text);
   text-align: center;
+  white-space: normal;
 }
 .input[type=submit]:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -1084,7 +1090,10 @@ tr {
 .label span {
   font-size: smaller;
   font-weight: var(--bold);
+  min-width: 0;
   padding: var(--padding-text);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 .label p {
   padding: var(--padding-text);
@@ -1204,6 +1213,7 @@ tr {
   padding: var(--padding-text);
   text-align: center;
   text-shadow: 0em var(--line-width) white;
+  white-space: nowrap;
   box-shadow: 0em 0.15em 0em var(--gray), 0.02em 0.225em 0.2em var(--darkgray), inset 0em var(--line-width) var(--line-width) white, inset 0em -0.075em 0.225em var(--gray);
 }
 .link {
@@ -1297,6 +1307,7 @@ button {
   outline: 0;
   padding: var(--padding-text);
   text-align: center;
+  white-space: normal;
 }
 button:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -1323,6 +1334,8 @@ fieldset {
 }
 fieldset legend {
   font-weight: var(--bold);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 input[type=button] {
   --link-color: white;
@@ -1339,6 +1352,7 @@ input[type=button] {
   outline: 0;
   padding: var(--padding-text);
   text-align: center;
+  white-space: normal;
 }
 input[type=button]:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -1559,6 +1573,7 @@ input[type=reset] {
   --link-color-visited: white;
   background-color: var(--superdarkgreen);
   color: white;
+  white-space: normal;
 }
 input[type=reset]:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -1618,6 +1633,7 @@ input[type=submit] {
   outline: 0;
   padding: var(--padding-text);
   text-align: center;
+  white-space: normal;
 }
 input[type=submit]:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -1773,7 +1789,10 @@ label h6,
 label span {
   font-size: smaller;
   font-weight: var(--bold);
+  min-width: 0;
   padding: var(--padding-text);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 label p {
   padding: var(--padding-text);
@@ -1870,6 +1889,7 @@ kbd {
   padding: var(--padding-text);
   text-align: center;
   text-shadow: 0em var(--line-width) white;
+  white-space: nowrap;
   box-shadow: 0em 0.15em 0em var(--gray), 0.02em 0.225em 0.2em var(--darkgray), inset 0em var(--line-width) var(--line-width) white, inset 0em -0.075em 0.225em var(--gray);
 }
 strong {
