--- a/css/patterns.css
+++ b/css/patterns.css
@@ -387,6 +387,7 @@
   outline: 0;
   padding: var(--padding-text);
   text-align: center;
+  white-space: normal;
 }
 .button:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -413,6 +414,8 @@
 }
 .fieldset legend {
   font-weight: var(--bold);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 .input[type=button] {
   --link-color: white;
@@ -429,6 +432,7 @@
   outline: 0;
   padding: var(--padding-text);
   text-align: center;
+  white-space: normal;
 }
 .input[type=button]:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -761,6 +765,7 @@
   --link-color-visited: white;
   background-color: var(--superdarkgreen);
   color: white;
+  white-space: normal;
 }
 .input[type=reset]:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -836,6 +841,7 @@
   outline: 0;
   padding: var(--padding-text);
   text-align: center;
+  white-space: normal;
 }
 .input[type=submit]:active {
   --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
@@ -1071,7 +1077,10 @@
 .label span {
   font-size: smaller;
   font-weight: var(--bold);
+  min-width: 0;
   padding: var(--padding-text);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 .label p {
   padding: var(--padding-text);
@@ -1207,6 +1216,7 @@
   padding: var(--padding-text);
   text-align: center;
   text-shadow: 0em var(--line-width) white;
+  white-space: nowrap;
   box-shadow: 0em 0.15em 0em var(--gray), 0.02em 0.225em 0.2em var(--darkgray), inset 0em var(--line-width) var(--line-width) white, inset 0em -0.075em 0.225em var(--gray);
 }
 .link {
@@ -1288,6 +1298,7 @@
   color: white;
   align-items: center;
   box-shadow: var(--shadow-deep);
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
@@ -1295,8 +1306,10 @@
 .banner h1 {
   font-size: 2em;
   font-weight: 300;
+  min-width: 0;
   padding: var(--padding-text);
-  white-space: nowrap;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 .bulleted {
   list-style: disc outside none;
@@ -1310,6 +1323,9 @@
   flex-direction: row;
   font-weight: var(--bold);
   margin-left: -1em;
+  min-width: 0;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 .field {
   --shadow-inset: inset var(--line-width) var(--line-width) 0.15em var(--shadow-color);
@@ -1354,8 +1370,11 @@
   padding: 0;
 }
 .nav ul li {
+  min-width: 0;
+  overflow-wrap: break-word;
   padding: 0.5em;
-  white-space: nowrap;
+  text-align: center;
+  word-wrap: break-word;
 }
 .nav ul a {
   background: transparent;
