--- a/elements/label.hbs
+++ b/elements/label.hbs
@@ -4,6 +4,6 @@
 </label>
 
 <label class=label>
-  <p>Label without <code>&lt;span&gt;</code> or <code>&lt;hX&gt;</code><p>
+  <p>Label without <code>&lt;span&gt;</code> or <code>&lt;hX&gt;</code></p>
   <input class=input type=text>
 </label>
