--- a/less/forms.less
+++ b/less/forms.less
@@ -70,6 +70,7 @@
 
   border: var(--border);
   border-radius: var(--border-radius);
+  display: flex;
 
   legend {
     font-weight: var(--bold);
@@ -322,6 +323,10 @@
     padding: var(--padding-text);
     overflow-wrap: break-word;
     word-wrap: break-word;
+  }
+
+  input {
+    margin: 0.25em;
   }
 
   p {
