--- a/css/elements.css
+++ b/css/elements.css
@@ -37,6 +37,7 @@
 .fieldset {
   border: var(--border);
   border-radius: var(--border-radius);
+  display: flex;
 }
 .fieldset legend {
   font-weight: var(--bold);
@@ -499,6 +500,9 @@
   padding: var(--padding-text);
   overflow-wrap: break-word;
   word-wrap: break-word;
+}
+.label input {
+  margin: 0.25em;
 }
 .label p {
   padding: var(--padding-text);
