--- a/css/patterns.css
+++ b/css/patterns.css
@@ -411,6 +411,7 @@
 .fieldset {
   border: var(--border);
   border-radius: var(--border-radius);
+  display: flex;
 }
 .fieldset legend {
   font-weight: var(--bold);
@@ -1082,6 +1083,9 @@
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
+.label input {
+  margin: 0.25em;
+}
 .label p {
   padding: var(--padding-text);
 }
@@ -1301,6 +1305,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin: 0;
   width: 100%;
 }
 .banner h1 {
