--- a/less/components.less
+++ b/less/components.less
@@ -44,7 +44,7 @@
 
 // Bulleted List
 //
-// In DLx projects, lists are often used semantically rather than stylistically, e.g. a phrase includes a list of words. As such, lists have no styling by default, and list styling needs to be explicitly set with the <code>.bulleted</code> or <code>.numbered</code> styles.
+// In DLx projects, lists are often used semantically rather than stylistically, e.g. a phrase includes a list of words. As such, lists have no styling by default, and list styling needs to be explicitly set with the <code>.bulleted</code> or <code>.numbered</code> styles. List items with text should include a `<p>` tag or other relevant element within them, following the principles of semantic markup.
 //
 // Markup: bulleted.hbs
 //
@@ -174,7 +174,7 @@
 
 // Numbered List
 //
-// For numbered lists.
+// For numbered lists. List items with text in them should contain a `<p>` tag or other relevant element, following the principles of semantic markup.
 //
 // Markup: numbered.hbs
 //
@@ -226,7 +226,7 @@
 
 // Reference List
 //
-// Styling for a bibliographic reference list. Note that each reference should be an `<li>` tag containing a `<p>` tag. **NOTE:** You may have to further customize the styling of the `<hX>` element depending on which header you are using.
+// Styling for a bibliographic reference list. Note that each reference should be an `<li>` tag containing a `<p>` tag. **NOTE:** You may have to further customize the styling of the `<hX>` element depending on which header you are using. Use `<cite>` for publication titles.
 //
 // Markup: reference-list.hbs
 //
