add documentation for click-to-copy hex

--- a/less/colors.less
+++ b/less/colors.less
@@ -1,6 +1,6 @@
 // Colors
 //
-// The following colors are available as CSS variables and classes. To set the font color, use `.{color}` (e.g. ``.wugblue`). To set the background color, use `.{color}-background` (e.g. `.wugblue-background`).
+// The following colors are available as CSS variables and classes. To set the font color, use `.{color}` (e.g. ``.wugblue`). To set the background color, use `.{color}-background` (e.g. `.wugblue-background`). Click on any color swatch to copy the hex code for that color.
 //
 // Weight: 3
 //
